# Rubo

./: Cargo.toml  README.md  Todo  install.sh
src/: main.rs
src/cmd/: cd.rs  count.rs  day.rs  git.rs  help.rs  life.rs  ls.rs  mod.rs  open.rs  pod.rs  sed.rs  strip.rs  todo.rs  tree.rs  work.rs
src/command/: base.rs  cat.rs  count.rs  day.rs  lark.rs  mod.rs  sed.rs  strip.rs
src/lib/: mod.rs
src/lib/pod/: dep.rs  dep_analyzer.rs  lockfile.rs  mod.rs  search.rs
src/lib/tree/: mod.rs
src/lib/util/: mod.rs  walker.rs
