[package]
name = "rubo"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "credit to rubo"
documentation = "https://github.com/sadjason/Rubo/blob/master/README.md"
readme = "README.md"
repository = "https://github.com/sadjason/Rubo"
homepage = "https://github.com/sadjason/Rubo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
ansi_term = "0.12"
once_cell = "1.10.0"
bytesize = "1.1.0"
yaml-rust = "0.4"
anyhow = "1.0"
regex = "1.5"
